Name:                gitit-comment
Version:             0.0.1
Cabal-Version:       >= 1.2
Synopsis:            Gitit plugin: remove comments like <!--[ ... ]-->
Category:            Text
Description:
  Gitit plugin: remove comments like <!--[ ... ]-->
Author:              Conal Elliott
Maintainer:          conal@conal.net
Copyright:           (c) 2011 by Conal Elliott
License:             BSD3
License-File:        COPYING
Stability:           experimental
build-type:          Simple
Package-Url:         http://github.com/conal/gitit-comment

Library
  hs-Source-Dirs:      src
  Extensions:
  Build-Depends:       base<5, containers, gitit >= 0.7.3.12
  Exposed-Modules:     
                       Network.Gitit.Plugin.Comment
                       
  ghc-options:         -Wall
